apt-1753 fix mobile nav with intercom icon + apt-1760 add bottom padding to handle new intercom position overlapping things in stake unstake calculators

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -430,3 +430,14 @@ button,
     margin-right: 1rem;
   }
 }
+
+
+  
+  @media (max-width: 1024px) {
+.intercom-lightweight-app-launcher{
+
+    bottom: 60px !important;
+  right:10px !important;
+  }
+
+}
